# expense_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.py  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy-infra.yml
agents/: __init__.py  orchestrator.py  validator.py
docs/: AZURE_SETUP.md  Expense-IDP-Master-Guide.md  YOUR_STEPS.md
expense_extractor/: agent.py  config.py  extractor.py  observability.py  schemas.py
infra/: README.md  main.bicep  main.bicepparam
infra/modules/: containerapp.bicep  cosmos.bicep  foundry.bicep  identity.bicep  logicapp.bicep  monitoring.bicep  search.bicep  storage.bicep
scripts/: gen_env.sh  index_policy.py
tests/: conftest.py  test_approval_gateway.py  test_checks.py  test_duplicate.py  test_extractor.py  test_observability.py  test_orchestrator.py  test_pipeline.py  test_policy_search.py  test_validator.py  test_webapp.py
tools/: __init__.py  checks.py  duplicate_check.py  erp_post.py  notify.py  policy_search.py  stores.py
webapp/: __init__.py  main.py  service.py
webapp/static/: app.js  index.html  style.css
workflow/: __init__.py  pipeline.py
